# whisper-base-q8-rn

./: .gitignore  App.js  App.tsx  App_backup.js  README.md  app.json  package-lock.json  package.json  setup.sh  start.sh
WhisperRNProject/: app.json  package-lock.json  package.json
WhisperRNProject/android/: settings.gradle
WhisperRNProject/android/app/: build.gradle
WhisperRNProject/android/app/src/debug/java/com/whisperrnproject/: ReactNativeFlipper.java
WhisperRNProject/android/app/src/main/java/com/whisperrnproject/: MainActivity.java  MainApplication.java
WhisperRNProject/android/app/src/main/res/values/: strings.xml
WhisperRNProject/ios/: Podfile
WhisperRNProject/ios/WhisperRNProject/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
WhisperRNProject/ios/WhisperRNProject.xcodeproj/: project.pbxproj
WhisperRNProject/ios/WhisperRNProject.xcodeproj/xcshareddata/xcschemes/: WhisperRNProject.xcscheme
WhisperRNProject/ios/WhisperRNProjectTests/: WhisperRNProjectTests.m
android/: build.gradle  settings.gradle
android/app/: build.gradle  debug.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: README.md
android/app/src/main/cpp/: CMakeLists.txt  whisper_android.cpp
android/app/src/main/java/com/whisperbaseq8rn/: MainActivity.java  MainApplication.java  WhisperModule.java  WhisperPackage.java
android/app/src/main/res/drawable/: rn_edit_text_material.xml
android/app/src/main/res/values/: strings.xml
src/native/: WhisperModule.js
src/utils/: AudioProcessor.js  Logger.js
(+1 files in other folders)
